<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="vertical">

    <Button
    android:layout_width="250dp"
    android:layout_height="60dp"
    android:id="@+id/button_activity_one"
    android:background="@drawable/bg_button"
    android:text="@string/text_activity_one"
    android:textColor="@android:color/white"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:id="@+id/button_activity_two"
        android:layout_marginTop="@dimen/dimens_20dp"
        android:background="@drawable/bg_button"
        android:text="@string/text_activity_two"
        android:textColor="@android:color/white"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:id="@+id/button_activity_three"
        android:layout_marginTop="@dimen/dimens_20dp"
        android:background="@drawable/bg_button"
        android:text="@string/text_activity_three"
        android:textColor="@android:color/white"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/dimens_20dp"
        android:id="@+id/button_activity_four"
        android:background="@drawable/bg_button"
        android:text="@string/text_activity_fore"
        android:textColor="@android:color/white"/>
</LinearLayout>

</RelativeLayout>