<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/img_bg_sign2"
                tools:context=".SignActivity">

    <include
        android:id="@+id/sign_toolbar"
        layout="@layout/toolbar_sign"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_toolbar"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:text="@string/text_sign_up"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_20sp"/>

        <TextView
            style="@style/textViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_60dp"
            android:text="@string/text_username"
            />

        <EditText
            style="@style/editTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="sandeepkasundra"
            android:textColor="@android:color/white"/>

        <TextView
            style="@style/textViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_40dp"
            android:text="@string/text_email_address"
            />

        <EditText
            style="@style/editTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="sandeepkasundra@gmail.com"
            android:textColor="@android:color/white"/>

        <TextView
            style="@style/textViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_40dp"
            android:text="@string/text_password"
            />

        <EditText
            style="@style/editTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="textPassword"
            android:text="sandeepkasundra@gmail.com"
            android:textColor="@android:color/white"/>

        <TextView
            style="@style/textViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_40dp"
            android:text="@string/text_confirm_password"
            />

        <EditText
            style="@style/editTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="textPassword"
            android:text="sandeepkasundra@gmail.com"
            android:textColor="@android:color/white"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="@dimen/dimens_20dp"
            android:layout_marginRight="@dimen/dimens_20dp"
            android:layout_marginTop="@dimen/dimens_40dp"
            android:background="@drawable/bg_button"
            android:text="@string/text_next"
            android:textColor="@android:color/white"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_20dp"
            android:orientation="horizontal">

            <TextView
                style="@style/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_already_have_an_account"
                />

            <TextView
                style="@style/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_2dp"
                android:text="@string/text_sign_in"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>